# ex_ecies

./: Makefile  Makefile.am  README.md  configure.ac  mix.exs
c_src/: ecies.c  ecies.h  example.c  keys.c  lib_elixir_ecies.c  secure.c
config/: config.exs
lib/: ex_ecies.ex
test/: ex_ecies_test.exs
